# KITEAI

./: .env.example  cloudbuild.yaml  pyproject.toml  requirements.txt  run_historical_dataflow.sh
auth/: Dockerfile  kite.py  main.py  secrets.py  settings.py
execution/: Dockerfile  order_executor.py  strategy_api.py
features/: indicators.py  test_indicators.py
features/feature_repo/feature_repo/data/: driver_stats.parquet
infra/helm/trader-platform/: Chart.yaml  values.yaml
infra/helm/trader-platform/charts/auth/: values.yaml
infra/helm/trader-platform/charts/auth/templates/: _helpers.tpl  deployment.yaml
infra/helm/trader-platform/charts/execution-api/: Chart.yaml  values.yaml
infra/helm/trader-platform/charts/execution-api/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/helm/trader-platform/charts/ingestion-streamer/: Chart.yaml  values.yaml
infra/helm/trader-platform/charts/ingestion-streamer/templates/: _helpers.tpl  deployment.yaml
infra/sql/: ohlcv_schema.sql  orders_schema.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
ingestion/: Dockerfile  config.py  historical.py  streamer.py
models/: backtest.py  genetic.py  hpo_ray.py  train_xgb.py
ops/: metrics_exporter.py  monitoring_dashboard.md
risk/: manager.py
