[tool.poetry]
name = "autonomous-trading-system"
version = "0.1.0"
description = "An autonomous trading system."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
kiteconnect = "^3.9.2"
google-cloud-secret-manager = "^2.16.2"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
confluent-kafka = "^2.2.0"
feast = {extras = ["redis"], version = "^0.32.1"}
mlflow = "^2.5.0"
xgboost = "^1.7.6"
ray = {extras = ["tune"], version = "^2.6.1"}
torch = "^2.0.1"
transformers = "^4.31.0"
deap = "^1.3.3"
pydantic = "^2.1.1"
pytest = "^7.4.0"
google-cloud-pubsub = "^2.17.1"
apache-beam = {extras = ["gcp"], version = "^2.49.0"}
numba = "^0.57.1"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
google-cloud-storage = "^2.10.0"
google-cloud-aiplatform = "^1.25.0"
flake8 = "^6.0.0"
prometheus-client = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
